# MikoPlayer

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/xana/media/mikoplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  Channel.cpp  Channel.h  JavaCallHelper.cpp  JavaCallHelper.h  MkFfmpeg.cpp  MkFfmpeg.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  safe_queue.h  test.cpp
app/src/main/java/com/xana/media/mikoplayer/: MainActivity.java  MkPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/xana/media/mikoplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
